# claude-code-helper-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agent-forge/: project-brief.md  project.json
.agent-forge/configs/: known-issues.json
.agent-forge/configs/migrations/: v1.0-to-v1.1.json  v1.1-to-v1.2.json  v1.2-to-v1.3.json  v1.3-to-v1.4.json  v1.4-to-v1.5.json
.agent-forge/plans/: backlog.json  progress-log.json  roadmap.json
.agent-forge/reports/: monitor-CMH-001-2026-02-14T19-30-00.md  test-2026-02-14T18-16-31.md  validate-2026-02-14T19-00-00.md
.agent-forge/state/: build-output.json  improve-output.json  improve-proposals.json  migration-log.json  monitor-output.json  monitor-patterns.json  monitor-test-gaps.json  pipeline.json  plan-output.json  test-output.json  validate-output.json
.agent-forge/tests/: test-cases.json  test-runs.json
src/claude_code_helper_mcp/: __init__.py  config.py
src/claude_code_helper_mcp/analytics/: __init__.py  analytics.py  cross_project.py  dashboard.py
src/claude_code_helper_mcp/cli/: __init__.py  main.py
tests/: test_analytics.py  test_check_alignment.py  test_cli_list_show.py  test_cli_status.py  test_config.py  test_confusion.py  test_cross_project.py  test_dashboard.py  test_drift_detector.py  test_error_loop.py  test_export_import.py  test_hooks.py  test_init.py  test_integration.py  test_intervention.py  test_markdown.py  test_models.py  test_recovery_context.py  test_recovery_workflow.py  test_scope_creep.py  test_server.py  test_state_reader.py  test_storage.py  test_usage_burn.py  test_window_manager.py
(+25 files in other folders)
